--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -1,33 +1,52 @@
 body{
     margin: 0;
 }
-/* .s_carousel{
-    width: 100%;
-    height: 100%;
+.s_carousel{
+    width: 100vw;
+    max-height: 100vh;
     position: relative;
     overflow: hidden;
-} */
+}
 .item{
-    width: 100%;
-    height: 80vh;
-    position: absolute;
+    width: 10%;
+    display: none;
+    /* position: absolute;
     top: 0;
     bottom: 0;
     left: 0;
-    right: 0;
-    display: none;
+    right: 0; */
+    transition: width 1s ease-in;
 }
 .item img{
     width: 100%;
     max-width: 100%;
+    height: auto;
     object-fit: cover;
-    height: 90vh;
-}
-.s_carousel .controls{
-    position: absolute;
-    bottom: 10px;
-
 }
 .item.active{
+    width: 100%;
     display: block;
+}
+.s_carousel .controls .next, .s_carousel .controls .prev{
+    position: absolute;
+    top: 50%;
+    z-index: 50;
+}
+.s_carousel .controls .next{
+    right: 0;
+}
+.s_carousel .controls .prev{
+    left: 0;
+}
+
+@keyframes fade-in{
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: 0.5;
+    }
+    100%{
+        opacity: 1;
+    }
 }
